[MODORDERS-1159]. Apply styling changes